perf: add reproducible lookup measurement analysis
Check independent fork statistics and require JVM instrumentation for shared-root memory deltas. Comparison self-tests and small-scenario memory smoke pass.